--- a/240321-frog/script/style.scss
+++ b/240321-frog/script/style.scss
@@ -285,7 +285,7 @@ section {
                     background-color: var(--secondary-color);
                     color: #000;
 
-                    &::before{
+                    &::before {
                         content: '';
                         width: 35vw;
                         height: 3px;
@@ -330,54 +330,128 @@ section {
 #sec4 {
     flex-direction: column;
 
-    h2 {
-        font-size: 80px;
-        font-family: 'GmarketSansLight';
-        margin: 20px 0px;
+    .wrap {
+        display: flex;
+        margin-top: 50px;
     }
+
+    .key {
+        width: 20vw;
+        height: 20vw;
+        background-color: var(--primary-color);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 999px;
+
+        h2 {
+            font-size: 80px;
+            font-family: 'GmarketSansBold';
+        }
+    }
+
+    ul {
+        margin-left: 100px;
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        &::before {
+            content: "";
+            width: 5vw;
+            height: 3px;
+            background-color: var(--primary-color);
+            position: absolute;
+            top: 50%;
+            left: -11.3%;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
+
+        li {
+            width: 12vw;
+            height: 12vw;
+            border-radius: 999px;
+            border: 3px solid var(--primary-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.1vw;
+            margin: 0px -20px;
+        }
+    }
+
 }
 
 #sec5 {
-    flex-direction: column;
+    background-color: var(--primary-color);
+
+    h1 {
+        position: absolute;
+        top: 150px;
+        left: 120px;
+        color: #fff;
+    }
 
     .persona_wrap {
-        display: flex;
-        gap: 100px;
+        position: absolute;
+        left: 70%;
+        top: 50%;
+        transform: translate(-50%, -50%);
 
         .persona {
             position: relative;
-            width: 35vw;
-            border-radius: 35px;
-            background-color: var(--secondary-color);
+            width: 50vw;
+            border-radius: 10px;
+            background-color: #fff;
             padding: 40px 30px;
-            box-shadow: var(--inner-shadow);
+            margin: 50px 0px;
 
             .per {
-                margin: 40px 0px;
+                margin: 20px 0px;
+                position: relative;
+                color: #3f3f3f;
+            }
+
+            .needs {
+                margin-top: 50px;
+                position: relative;
+
+                &::before {
+                    content: '';
+                    width: 45vw;
+                    height: 3px;
+                    background-color: #3f3f3f;
+                    position: absolute;
+                    top: -25px;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
             }
 
             h2 {
-                font-size: 40px;
+                font-size: 1.8vw;
                 text-align: left;
                 font-family: 'GmarketSansBold';
             }
 
             span {
-                font-size: 25px;
+                font-size: 1vw;
                 position: absolute;
-                top: 8%;
-                left: 25%;
+                top: 13%;
+                left: 16%;
             }
 
             h3 {
-                font-size: 35px;
+                font-size: 1.8vw;
                 text-align: left;
                 font-family: 'GmarketSansBold';
                 color: var(--primary-color);
             }
 
             p {
-                font-size: 20px;
+                font-size: 1vw;
                 text-align: left;
                 margin-top: 10px;
             }
@@ -386,10 +460,21 @@ section {
 }
 
 #sec6 {
-    flex-direction: column;
+    background-color: var(--primary-color);
+
+    h1 {
+        position: absolute;
+        top: 150px;
+        left: 120px;
+        color: #fff;
+    }
 
     img {
         width: 90%;
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
 
@@ -398,26 +483,16 @@ section {
 
     .inner {
         ul {
+            margin-top: 50px;
+
             li {
                 display: flex;
                 align-items: center;
-                margin: 20px 0px;
+                margin: -40px 0px;
                 gap: 40px;
-
-                &.title {
-                    margin-left: 12vw;
-
-                    .box {
-                        height: 2vw;
-                        font-size: 25px;
-                        font-family: 'GmarketSansBold';
-                        box-shadow: 0px 0px 0px #000;
-                    }
-                }
 
                 h2 {
                     width: 10vw;
-                    color: var(--primary-color);
                     font-size: 30px;
                     font-family: 'GmarketSansBold';
                 }
@@ -430,19 +505,32 @@ section {
                     justify-content: center;
                     align-items: center;
                     font-size: 20px;
-                    box-shadow: var(--inner-shadow);
 
                     &.box1 {
-                        background-color: var(--secondary-color);
-                    }
-
-                    &.box2 {
                         background-color: var(--primary-color);
-                        color: var(--secondary-color);
+                        color: #fff;
+                        width: 12vw;
+                        height: 12vw;
+                        border-radius: 999px;
+                        position: relative;
+
+                        &::before {
+                            content: '';
+                            width: 5vw;
+                            height: 3px;
+                            background-color: var(--primary-color);
+                            position: absolute;
+                            right: -31%;
+                            z-index: -1;
+                        }
+
+                        p {
+                            width: 8vw;
+                        }
                     }
 
                     span {
-                        color: #fff;
+                        color: var(--primary-color);
                     }
                 }
             }
