--- a/240321-frog/script/style.css
+++ b/240321-frog/script/style.css
@@ -455,31 +455,84 @@ section h1 span::before {
 #sec8 {
   flex-direction: column;
 }
-#sec8 .title {
-  display: flex;
-  gap: 40px;
+#sec8 h1 {
+  font-size: 35px;
+  line-height: 35px;
+  margin-bottom: 0px;
+  position: absolute;
+  z-index: 99;
 }
-#sec8 .title h1 {
-  width: 30vw;
+#sec8 h1:nth-child(1) {
+  top: 22%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+}
+#sec8 h1:nth-child(2) {
+  top: 78%;
+  left: 75%;
+  transform: translate(-50%, -50%);
 }
 #sec8 .inner {
   display: flex;
-  gap: 40px;
 }
 #sec8 .inner .box {
-  width: 30vw;
-  height: 25vw;
-  background-color: var(--secondary-color);
-  box-shadow: var(--inner-shadow);
-  border-radius: 30px;
+  width: 22vw;
+  height: 22vw;
+  border-radius: 999px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 30px;
+  margin: 0px -40px;
+}
+#sec8 .inner .box p {
+  width: 12vw;
+}
+#sec8 .inner .box:nth-child(1) {
+  position: relative;
+  background-color: var(--primary-color);
+}
+#sec8 .inner .box:nth-child(1)::before {
+  content: "";
+  width: 7vw;
+  height: 3px;
+  background-color: var(--primary-color);
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  rotate: 45deg;
+  z-index: -1;
+}
+#sec8 .inner .box:nth-child(2) {
+  position: relative;
+  background-color: #fff;
+  border: 3px solid var(--primary-color);
+}
+#sec8 .inner .box:nth-child(2)::before {
+  content: "";
+  width: 7vw;
+  height: 3px;
+  background-color: var(--primary-color);
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  rotate: 45deg;
+  z-index: -1;
 }
 
 #sec9 {
   position: relative;
+  background-color: var(--primary-color);
+  margin-top: 32.5px;
+}
+#sec9::before {
+  content: "";
+  background: url(../img/Ellipse.svg) repeat-x center;
+  background-size: 75px;
+  position: absolute;
+  top: calc(0% - 32.5px);
+  width: 100%;
+  height: 75px;
 }
 #sec9 .app_text {
   position: absolute;
@@ -488,9 +541,12 @@ section h1 span::before {
   transform: translate(-50%, -50%);
   text-align: left;
 }
+#sec9 .app_text h1 {
+  color: #fff;
+}
 #sec9 .app_text p {
   font-size: 30px;
-  color: #585858;
+  color: var(--light-color);
 }
 #sec9 .app_img {
   position: absolute;
@@ -506,16 +562,6 @@ section h1 span::before {
 #sec10 {
   position: relative;
   background-color: var(--primary-color);
-  margin-top: 32.5px;
-}
-#sec10::before {
-  content: "";
-  background: url(../img/Ellipse.svg) repeat-x center;
-  background-size: 75px;
-  position: absolute;
-  top: calc(0% - 32.5px);
-  width: 100%;
-  height: 75px;
 }
 #sec10 .app_text {
   position: absolute;
@@ -615,10 +661,58 @@ section h1 span::before {
   width: 100%;
 }
 
+#sec12-1 {
+  height: 50vh;
+}
+#sec12-1 h1 {
+  font-size: 40px;
+  line-height: 25px;
+}
+
 #sec13 {
   gap: 200px;
 }
-#sec13 ul li {
+#sec13 h1 {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+  color: var(--primary-color);
+}
+#sec13 .color {
+  width: 27%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+#sec13 .color li {
+  width: 8vw;
+  height: 8vw;
+  border-radius: 999px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-family: "GmarketSansBold";
+}
+#sec13 .color li:nth-child(1) {
+  background-color: #668A6B;
+}
+#sec13 .color li:nth-child(2) {
+  background-color: #006543;
+}
+#sec13 .color li:nth-child(3) {
+  background-color: #FDFBD8;
+}
+#sec13 .color li:nth-child(4) {
+  background-color: #EAD3B1;
+}
+#sec13 .color li:nth-child(5) {
+  background-color: #F5E9D8;
+}
+#sec13 .color li:nth-child(6) {
+  background-color: #FBF6EF;
+}
+#sec13 .text li {
   margin: 30px 0px;
   font-size: 30px;
   font-family: "GmarketSansBold";
@@ -628,18 +722,35 @@ section h1 span::before {
   flex-direction: column;
   gap: 120px;
 }
-#sec14 img {
+#sec14 h1 {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+  color: var(--primary-color);
+}
+#sec14 .wrap {
   width: 55%;
+  text-align: right;
+}
+#sec14 img {
+  width: 60%;
 }
 #sec14 p {
-  width: 60%;
+  width: 100%;
   font-size: 30px;
-  text-align: left;
+  color: #959595;
+  margin: 30px 0px 100px;
 }
 
 #sec15 {
   flex-direction: column;
   gap: 120px;
+}
+#sec15 h1 {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+  color: var(--primary-color);
 }
 #sec15 img {
   width: 40%;
