--- a/240321-frog/script/style.css
+++ b/240321-frog/script/style.css
@@ -823,32 +823,16 @@ section h1 span::before {
   width: 60%;
 }
 
-.subtract img {
-  position: absolute;
+#sec17 {
+  flex-direction: column;
 }
-.subtract img:nth-child(1) {
-  top: 196vh;
-  left: 0%;
+#sec17 div {
+  width: 50%;
 }
-.subtract img:nth-child(2) {
-  top: 392vh;
-  right: 0%;
-}
-.subtract img:nth-child(3) {
-  top: 463vh;
-  left: 10%;
-}
-.subtract img:nth-child(4) {
-  top: 516vh;
-  left: 33%;
-}
-.subtract img:nth-child(5) {
-  top: 578vh;
-  left: 81%;
-}
-.subtract img:nth-child(6) {
-  top: 785vh;
-  right: 0%;
+#sec17 div p {
+  margin: 30px 0px;
+  text-align: left;
+  font-size: 20px;
 }
 
 footer {
