--- a/240502-yeogi/script/style.css
+++ b/240502-yeogi/script/style.css
@@ -67,6 +67,9 @@ section h1 {
   color: var(--black);
   font-size: 30px;
   font-family: "JalnanGothic";
+  position: absolute;
+  top: 145px;
+  left: 145px;
 }
 section h1 span {
   margin-right: 30px;
@@ -88,11 +91,6 @@ section h1 span {
 #sec1 {
   text-align: left;
 }
-#sec1 h1 {
-  position: absolute;
-  top: 25%;
-  left: 7%;
-}
 #sec1 .text-wrap {
   position: absolute;
   top: 50%;
@@ -101,67 +99,66 @@ section h1 span {
 }
 #sec1 .text-wrap h2 {
   color: var(--main-color);
-  font-size: 70px;
+  font-size: 60px;
   margin-bottom: 40px;
   font-family: "Pretendard-Black";
 }
 #sec1 .text-wrap p {
   color: var(--gray);
-  font-size: 30px;
+  font-size: 28px;
   font-family: "Pretendard-SemiBold";
 }
 
-#sec2 {
-  text-align: left;
-  align-items: end;
-}
-#sec2 .text-wrap {
-  position: absolute;
-  top: 25%;
-  left: 7%;
-}
 #sec2 .text-wrap p {
+  position: absolute;
+  top: 185px;
+  left: 145px;
   display: block;
   color: var(--gray);
   font-family: "Pretendard-Medium";
   font-size: 30px;
 }
 #sec2 ul {
-  margin-right: 100px;
-  text-align: right;
+  display: flex;
+  gap: 50px;
 }
 #sec2 ul li {
-  color: var(--main-color);
-  font-size: 70px;
-  margin-bottom: 40px;
+  width: 16vw;
+  height: 16vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  border-radius: 999px;
   font-family: "Pretendard-Black";
+}
+#sec2 ul li:nth-child(1), #sec2 ul li:nth-child(3) {
+  background-color: #FFC3C9;
+}
+#sec2 ul li:nth-child(2) {
+  border: 3px solid #FFC3C9;
 }
 
 #sec3 {
   background-color: var(--bg-color);
-  border-radius: 99px 99px 0px 0px;
 }
 #sec3 ul {
-  width: 50%;
-  height: 55%;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  margin-top: 50px;
 }
 #sec3 ul li {
-  width: 250px;
-  height: 250px;
-  border: 5px solid var(--gray);
-  border-radius: 30px;
+  width: 16vw;
+  height: 16vw;
+  border-radius: 999px;
+  background-color: #fff;
+  margin: 0px -30px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 #sec3 ul li p {
-  width: 200px;
+  width: 8vw;
   font-size: 25px;
   color: var(--gray);
   font-family: "Pretendard-Black";
@@ -175,14 +172,37 @@ section h1 span {
   background-color: var(--bg-color);
 }
 #sec4 ul {
-  margin-top: 50px;
+  display: flex;
 }
 #sec4 ul li {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 13vw;
+  height: 13vw;
+  border-radius: 999px;
+  background-color: #fff;
+  margin: -20px -20px;
+}
+#sec4 ul li:nth-child(1) {
+  position: relative;
+  border: 3px solid #FA0008;
+  background-color: transparent;
+  color: #FA0008;
+  font-size: 25px;
+  font-family: "Pretendard-Black";
+  margin-right: 100px;
+}
+#sec4 ul li:nth-child(1)::after {
+  content: "";
+  width: 4.3vw;
+  height: 3px;
+  background-color: #FA0008;
+  position: absolute;
+  left: 100%;
 }
 #sec4 ul li p {
+  width: 8vw;
   font-size: 25px;
   color: var(--gray);
   font-family: "Pretendard-Black";
@@ -192,43 +212,56 @@ section h1 span {
   font-family: "Pretendard-Black";
 }
 
-#sec5 {
-  flex-direction: column;
-}
 #sec5 .persona_wrap {
   display: flex;
-  gap: 100px;
+  gap: 30px;
 }
 #sec5 .persona_wrap .persona {
   position: relative;
-  width: 35vw;
-  margin-top: 50px;
-  border-radius: 30px;
+  width: 38vw;
+  border-radius: 10px;
   background-color: var(--bg-color);
   padding: 40px 30px;
+  margin: 50px 0px;
 }
 #sec5 .persona_wrap .persona .per {
-  margin: 40px 0px;
+  margin: 20px 0px;
+  position: relative;
+  color: #404040;
+}
+#sec5 .persona_wrap .persona .needs {
+  margin-top: 50px;
+  position: relative;
+}
+#sec5 .persona_wrap .persona .needs::before {
+  content: "";
+  width: 35vw;
+  height: 3px;
+  background-color: #404040;
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #sec5 .persona_wrap .persona h2 {
-  font-size: 40px;
+  font-size: 1.8vw;
   text-align: left;
-  font-family: "JalnanGothic";
+  font-family: "Pretendard-Black";
 }
 #sec5 .persona_wrap .persona span {
-  font-size: 25px;
+  font-size: 1vw;
   position: absolute;
-  top: 8%;
-  left: 25%;
+  top: 15%;
+  left: 18%;
 }
 #sec5 .persona_wrap .persona h3 {
-  font-size: 35px;
+  font-size: 1.8vw;
   text-align: left;
-  font-family: "JalnanGothic";
+  font-family: "Pretendard-Black";
   color: var(--main-color);
 }
 #sec5 .persona_wrap .persona p {
-  font-size: 20px;
+  font-size: 1vw;
   text-align: left;
   margin-top: 10px;
 }
@@ -241,14 +274,17 @@ section h1 span {
   text-align: left;
 }
 #sec7 ul {
-  margin-top: 50px;
+  position: absolute;
+  top: 50%;
+  left: 70%;
+  transform: translate(-50%, -50%);
 }
 #sec7 ul li {
   margin: 20px;
-  width: 1000px;
-  height: 200px;
-  border: 5px solid var(--gray);
-  border-radius: 99px;
+  width: 50vw;
+  height: 12vw;
+  background-color: var(--bg-color);
+  border-radius: 999px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -261,9 +297,16 @@ section h1 span {
   color: #E45779;
 }
 #sec7 ul li h2 {
+  width: 10vw;
+  height: 10vw;
   font-family: "JalnanGothic";
   font-size: 35px;
+  border-radius: 99px;
+  background-color: #fff;
   color: #EE8C34;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #sec7 ul li h2 span {
   font-family: "JalnanGothic";
@@ -283,34 +326,71 @@ section h1 span {
 }
 
 #sec8 {
-  gap: 50px;
-}
-#sec8 .target {
-  width: 1000px;
-  height: 310px;
-  border-radius: 30px;
-  background-color: var(--bg-color);
-  display: flex;
   flex-direction: column;
+}
+#sec8 h1 {
+  font-size: 35px;
+  line-height: 35px;
+  margin-bottom: 0px;
+  position: absolute;
+  z-index: 99;
+}
+#sec8 h1:nth-child(1) {
+  top: 22%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+}
+#sec8 h1:nth-child(2) {
+  top: 78%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+}
+#sec8 .inner {
+  display: flex;
+}
+#sec8 .inner .box {
+  width: 22vw;
+  height: 22vw;
+  border-radius: 999px;
+  display: flex;
   justify-content: center;
-  gap: 50px;
-  padding: 0px 50px;
-}
-#sec8 .target:nth-child(1) {
-  text-align: left;
-}
-#sec8 .target:nth-child(2) {
-  text-align: right;
-}
-#sec8 .target h2 {
-  font-family: "JalnanGothic";
+  align-items: center;
   font-size: 30px;
-  color: var(--main-color);
+  margin: 0px -40px;
 }
-#sec8 .target p {
-  font-family: "Pretendard-SemiBold";
-  font-size: 30px;
-  color: var(--gray);
+#sec8 .inner .box p {
+  width: 12vw;
+}
+#sec8 .inner .box:nth-child(1) {
+  position: relative;
+  background-color: var(--bg-color);
+}
+#sec8 .inner .box:nth-child(1)::before {
+  content: "";
+  width: 7vw;
+  height: 3px;
+  background-color: var(--bg-color);
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  rotate: 45deg;
+  z-index: -1;
+}
+#sec8 .inner .box:nth-child(2) {
+  position: relative;
+  background-color: #fff;
+  border: 3px solid var(--bg-color);
+}
+#sec8 .inner .box:nth-child(2)::before {
+  content: "";
+  width: 7vw;
+  height: 3px;
+  background-color: var(--bg-color);
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  rotate: 45deg;
+  z-index: -1;
 }
 
 #sec9 .app_text {
@@ -320,12 +400,15 @@ section h1 span {
   transform: translate(-50%, -50%);
   text-align: left;
 }
-#sec9 .app_text h1 {
-  font-family: "JalnanGothic";
-  font-size: 40px;
+#sec9 .app_text h2 {
   display: flex;
+  color: var(--black);
+  font-size: 40px;
+  font-family: "JalnanGothic";
 }
-#sec9 .app_text h1 span {
+#sec9 .app_text h2 span {
+  margin-right: 30px;
+  display: block;
   font-family: "JalnanGothic";
 }
 #sec9 .app_text p {
@@ -350,12 +433,15 @@ section h1 span {
   right: 15%;
   text-align: left;
 }
-#sec10 .app_text h1 {
-  font-family: "JalnanGothic";
-  font-size: 40px;
+#sec10 .app_text h2 {
   display: flex;
+  color: var(--black);
+  font-size: 40px;
+  font-family: "JalnanGothic";
 }
-#sec10 .app_text h1 span {
+#sec10 .app_text h2 span {
+  margin-right: 30px;
+  display: block;
   font-family: "JalnanGothic";
 }
 #sec10 .app_text p {
@@ -381,12 +467,15 @@ section h1 span {
   transform: translate(-50%, -50%);
   text-align: left;
 }
-#sec11 .app_text h1 {
-  font-family: "JalnanGothic";
-  font-size: 40px;
+#sec11 .app_text h2 {
   display: flex;
+  color: var(--black);
+  font-size: 40px;
+  font-family: "JalnanGothic";
 }
-#sec11 .app_text h1 span {
+#sec11 .app_text h2 span {
+  margin-right: 30px;
+  display: block;
   font-family: "JalnanGothic";
 }
 #sec11 .app_text p {
@@ -405,8 +494,17 @@ section h1 span {
   width: 100%;
 }
 
+#sec12 {
+  height: 50vh;
+  background-color: #F5F5F5;
+}
+#sec12 h2 {
+  font-family: "Pretendard-Black";
+  font-size: 40px;
+}
+
 #sec13 {
-  background-color: var(--bg-color);
+  background-color: #F5F5F5;
 }
 #sec13 h1 {
   position: absolute;
@@ -421,7 +519,7 @@ section h1 span {
 }
 
 #sec14 {
-  background-color: var(--bg-color);
+  background-color: #F5F5F5;
   text-align: left;
 }
 #sec14 h1 {
@@ -448,7 +546,7 @@ section h1 span {
 #sec14 ul li h2 {
   width: 500px;
   color: var(--main-color);
-  font-size: 50px;
+  font-size: 40px;
 }
 #sec14 ul li p {
   width: 800px;
@@ -457,7 +555,7 @@ section h1 span {
 }
 
 #sec15 {
-  background-color: var(--bg-color);
+  background-color: #F5F5F5;
   text-align: left;
   border-radius: 0px 0px 99px 99px;
 }
@@ -467,7 +565,7 @@ section h1 span {
   left: 85px;
 }
 #sec15 img {
-  width: 30%;
+  width: 25%;
 }
 #sec15 p {
   width: 30%;
