--- a/240502-yeogi/script/style.scss
+++ b/240502-yeogi/script/style.scss
@@ -6,8 +6,6 @@
     --gray: #404040;
 }
 
-// @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
-
 @font-face {
     font-family: 'yg-jalnan';
     src: url(../font/Jalnan2.otf);
@@ -76,6 +74,9 @@ section {
         color: var(--black);
         font-size: 30px;
         font-family: 'JalnanGothic';
+        position: absolute;
+        top: 145px;
+        left: 145px;
 
         span {
             margin-right: 30px;
@@ -100,12 +101,6 @@ section {
 #sec1 {
     text-align: left;
 
-    h1 {
-        position: absolute;
-        top: 25%;
-        left: 7%;
-    }
-
     .text-wrap {
         position: absolute;
         top: 50%;
@@ -114,29 +109,26 @@ section {
 
         h2 {
             color: var(--main-color);
-            font-size: 70px;
+            font-size: 60px;
             margin-bottom: 40px;
             font-family: 'Pretendard-Black';
         }
 
         p {
             color: var(--gray);
-            font-size: 30px;
+            font-size: 28px;
             font-family: 'Pretendard-SemiBold';
         }
     }
 }
 
 #sec2 {
-    text-align: left;
-    align-items: end;
-
     .text-wrap {
-        position: absolute;
-        top: 25%;
-        left: 7%;
 
         p {
+            position: absolute;
+            top: 185px;
+            left: 145px;
             display: block;
             color: var(--gray);
             font-family: 'Pretendard-Medium';
@@ -145,44 +137,52 @@ section {
     }
 
     ul {
-        margin-right: 100px;
-        text-align: right;
+        display: flex;
+        gap: 50px;
 
         li {
-            color: var(--main-color);
-            font-size: 70px;
-            margin-bottom: 40px;
+            width: 16vw;
+            height: 16vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 35px;
+            border-radius: 999px;
             font-family: 'Pretendard-Black';
+
+            &:nth-child(1),
+            &:nth-child(3) {
+                background-color: #FFC3C9;
+            }
+
+            &:nth-child(2) {
+                border: 3px solid #FFC3C9;
+            }
         }
     }
 }
 
 #sec3 {
     background-color: var(--bg-color);
-    border-radius: 99px 99px 0px 0px;
 
     ul {
-        width: 50%;
-        height: 55%;
         display: flex;
-        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        gap: 20px;
-        margin-top: 50px;
 
         li {
-            width: 250px;
-            height: 250px;
-            border: 5px solid var(--gray);
-            border-radius: 30px;
+            width: 16vw;
+            height: 16vw;
+            border-radius: 999px;
+            background-color: #fff;
+            margin: 0px -30px;
 
             display: flex;
             align-items: center;
             justify-content: center;
 
             p {
-                width: 200px;
+                width: 8vw;
                 font-size: 25px;
                 color: var(--gray);
                 font-family: 'Pretendard-Black';
@@ -200,14 +200,39 @@ section {
     background-color: var(--bg-color);
 
     ul {
-        margin-top: 50px;
+        display: flex;
 
         li {
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 13vw;
+            height: 13vw;
+            border-radius: 999px;
+            background-color: #fff;
+            margin: -20px -20px;
+
+            &:nth-child(1) {
+                position: relative;
+                border: 3px solid #FA0008;
+                background-color: transparent;
+                color: #FA0008;
+                font-size: 25px;
+                font-family: 'Pretendard-Black';
+                margin-right: 100px;
+
+                &::after {
+                    content: '';
+                    width: 4.3vw;
+                    height: 3px;
+                    background-color: #FA0008;
+                    position: absolute;
+                    left: 100%;
+                }
+            }
 
             p {
+                width: 8vw;
                 font-size: 25px;
                 color: var(--gray);
                 font-family: 'Pretendard-Black';
@@ -222,46 +247,63 @@ section {
 }
 
 #sec5 {
-    flex-direction: column;
 
     .persona_wrap {
         display: flex;
-        gap: 100px;
+        gap: 30px;
 
         .persona {
             position: relative;
-            width: 35vw;
-            margin-top: 50px;
-            border-radius: 30px;
+            width: 38vw;
+            border-radius: 10px;
             background-color: var(--bg-color);
             padding: 40px 30px;
+            margin: 50px 0px;
 
             .per {
-                margin: 40px 0px;
+                margin: 20px 0px;
+                position: relative;
+                color: #404040;
+            }
+
+            .needs {
+                margin-top: 50px;
+                position: relative;
+
+                &::before {
+                    content: '';
+                    width: 35vw;
+                    height: 3px;
+                    background-color: #404040;
+                    position: absolute;
+                    top: -25px;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
             }
 
             h2 {
-                font-size: 40px;
+                font-size: 1.8vw;
                 text-align: left;
-                font-family: 'JalnanGothic';
+                font-family: 'Pretendard-Black';
             }
 
             span {
-                font-size: 25px;
+                font-size: 1vw;
                 position: absolute;
-                top: 8%;
-                left: 25%;
+                top: 15%;
+                left: 18%;
             }
 
             h3 {
-                font-size: 35px;
+                font-size: 1.8vw;
                 text-align: left;
-                font-family: 'JalnanGothic';
+                font-family: 'Pretendard-Black';
                 color: var(--main-color);
             }
 
             p {
-                font-size: 20px;
+                font-size: 1vw;
                 text-align: left;
                 margin-top: 10px;
             }
@@ -277,14 +319,17 @@ section {
     text-align: left;
 
     ul {
-        margin-top: 50px;
+        position: absolute;
+        top: 50%;
+        left: 70%;
+        transform: translate(-50%, -50%);
 
         li {
             margin: 20px;
-            width: 1000px;
-            height: 200px;
-            border: 5px solid var(--gray);
-            border-radius: 99px;
+            width: 50vw;
+            height: 12vw;
+            background-color: var(--bg-color);
+            border-radius: 999px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -303,9 +348,16 @@ section {
             }
 
             h2 {
+                width: 10vw;
+                height: 10vw;
                 font-family: 'JalnanGothic';
                 font-size: 35px;
+                border-radius: 99px;
+                background-color: #fff;
                 color: #EE8C34;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
                 span {
                     font-family: 'JalnanGothic';
@@ -332,37 +384,79 @@ section {
 }
 
 #sec8 {
-    gap: 50px;
+    flex-direction: column;
 
-    .target {
-        width: 1000px;
-        height: 310px;
-        border-radius: 30px;
-        background-color: var(--bg-color);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 50px;
-        padding: 0px 50px;
+    h1 {
+        font-size: 35px;
+        line-height: 35px;
+        margin-bottom: 0px;
+        position: absolute;
+        z-index: 99;
 
         &:nth-child(1) {
-            text-align: left;
+            top: 22%;
+            left: 24%;
+            transform: translate(-50%, -50%);
         }
 
         &:nth-child(2) {
-            text-align: right;
+            top: 78%;
+            left: 75%;
+            transform: translate(-50%, -50%);
         }
+    }
 
-        h2 {
-            font-family: 'JalnanGothic';
-            font-size: 30px;
-            color: var(--main-color);
-        }
+    .inner {
+        display: flex;
 
-        p {
-            font-family: 'Pretendard-SemiBold';
+        .box {
+            width: 22vw;
+            height: 22vw;
+            border-radius: 999px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-size: 30px;
-            color: var(--gray);
+            margin: 0px -40px;
+
+            p {
+                width: 12vw;
+            }
+
+            &:nth-child(1) {
+                position: relative;
+                background-color: var(--bg-color);
+
+                &::before {
+                    content: '';
+                    width: 7vw;
+                    height: 3px;
+                    background-color: var(--bg-color);
+                    position: absolute;
+                    top: 0%;
+                    left: 0%;
+                    rotate: 45deg;
+                    z-index: -1;
+                }
+            }
+
+            &:nth-child(2) {
+                position: relative;
+                background-color: #fff;
+                border: 3px solid var(--bg-color);
+
+                &::before {
+                    content: '';
+                    width: 7vw;
+                    height: 3px;
+                    background-color: var(--bg-color);
+                    position: absolute;
+                    bottom: 0%;
+                    right: 0%;
+                    rotate: 45deg;
+                    z-index: -1;
+                }
+            }
         }
     }
 }
@@ -375,12 +469,15 @@ section {
         transform: translate(-50%, -50%);
         text-align: left;
 
-        h1 {
-            font-family: 'JalnanGothic';
-            font-size: 40px;
+        h2 {
             display: flex;
-
+            color: var(--black);
+            font-size: 40px;
+            font-family: 'JalnanGothic';
+    
             span {
+                margin-right: 30px;
+                display: block;
                 font-family: 'JalnanGothic';
             }
         }
@@ -412,12 +509,15 @@ section {
         right: 15%;
         text-align: left;
 
-        h1 {
-            font-family: 'JalnanGothic';
-            font-size: 40px;
+        h2 {
             display: flex;
-
+            color: var(--black);
+            font-size: 40px;
+            font-family: 'JalnanGothic';
+    
             span {
+                margin-right: 30px;
+                display: block;
                 font-family: 'JalnanGothic';
             }
         }
@@ -450,12 +550,15 @@ section {
         transform: translate(-50%, -50%);
         text-align: left;
 
-        h1 {
-            font-family: 'JalnanGothic';
-            font-size: 40px;
+        h2 {
             display: flex;
-
+            color: var(--black);
+            font-size: 40px;
+            font-family: 'JalnanGothic';
+    
             span {
+                margin-right: 30px;
+                display: block;
                 font-family: 'JalnanGothic';
             }
         }
@@ -480,8 +583,18 @@ section {
     }
 }
 
+#sec12{
+    height: 50vh;
+    background-color: #F5F5F5;
+
+    h2{
+        font-family: 'Pretendard-Black';
+        font-size: 40px;
+    }
+}
+
 #sec13 {
-    background-color: var(--bg-color);
+    background-color: #F5F5F5;
 
     h1 {
         position: absolute;
@@ -498,7 +611,7 @@ section {
 }
 
 #sec14 {
-    background-color: var(--bg-color);
+    background-color: #F5F5F5;
     text-align: left;
 
     h1 {
@@ -536,7 +649,7 @@ section {
             h2 {
                 width: 500px;
                 color: var(--main-color);
-                font-size: 50px;
+                font-size: 40px;
             }
 
             p {
@@ -549,7 +662,7 @@ section {
 }
 
 #sec15 {
-    background-color: var(--bg-color);
+    background-color: #F5F5F5;
     text-align: left;
     border-radius: 0px 0px 99px 99px;
 
@@ -560,7 +673,7 @@ section {
     }
 
     img {
-        width: 30%;
+        width: 25%;
     }
 
     p {
