--- a/240517-symbol/script/style.scss
+++ b/240517-symbol/script/style.scss
@@ -337,6 +337,11 @@ section {
 #sec10 {
     height: 120vh;
 
-    background: url(../img/Business\ Card.png) no-repeat center;
+    background: url(../img/card1.png) no-repeat center;
+    background-size: cover;
+}
+#sec11 {
+    height: 120vh;
+    background: url(../img/card2.png) no-repeat center;
     background-size: cover;
 }
